# modal-dsl

./: .gitignore  Cargo.toml  README.md  delay.modal  test.clif
examples/: 42.modal  cli.rs  delay.modal  fib.modal  state.modal
examples/samples/: 42.modal  bad.modal  delay3.modal  delay3_2.modal  fib.modal  if.modal  loop.modal  math.modal  seq_assign.modal
src/: compile.rs  lib.rs  main.rs  parse.rs
src/compile/: library.rs  recursor.rs  state_storage.rs  storage.rs  typed.rs  varstack.rs
src/parse/: array.rs  binop.rs  block.rs  call.rs  expr.rs  if_.rs  inputs.rs  item.rs  let_.rs  literal.rs  loop_.rs  path.rs  state.rs  step.rs  unop.rs  var.rs  yield_.rs
tests/: 42.rs  delay3.rs  e2e.rs  fib.rs  if.rs  loop.rs  math.rs  seq_assign.rs
