[package]
name = "modal-dsl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]

[dependencies]
anyhow = "1.0.95"
chumsky = "0.9.3"
cranelift = { version = "0.116.1", features = ["jit", "module"] }
cranelift-codegen = "0.116.1"
cranelift-native = "0.116.1"
derive_more = { version = "1.0.0", features = ["from"] }

[dev-dependencies]
ariadne = "0.5.0"

[profile.release]
debug = true
